5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1871_2872.log
== TEST (2019-07-02 16:42:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = 6.8*(8.2/2)
b = 4.2*(1.1/2)
c = 8.4*(7.9/2)
print(round(a+b+c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = (7.9+1.1+8.2)/2
b = 6.8+4.2+8.4
print(a+b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:44:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = (7.9+1.1+8.2)/2
b = 6.8+4.2+8.4
print(a*b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:44:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = (7.9+1.1+8.2)/2
b = 6.8+4.2+8.4
print(a*b)

-- EXECUTION TIME:
1.00145
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,7.9]]
---- correct output:
21.12
---- user output:
166.83999999999997
-- TEST CASE 2:
---- input:
[[5.6,3.0],[2.2,1.1],[6.3,4.4]]
---- correct output:
7.82
---- user output:
166.83999999999997
-- TEST CASE 3:
---- input:
[[2,3,4],[3.4,5.5,6]]
---- correct output:
6.18
---- user output:
166.83999999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = 6.8*(8.2/2)
b = 4.2*(1.1/2)
c = 8.4*(7.9/2)
print(a+b+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = 6.8*(8.2/2)
b = 4.2*(1.1/2)
c = 8.4*(7.9/2)
print(a+b+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = (6.8*8.2/2)
b = (4.2*1.1/2)
c = (8.4*7.9/2)
print(a+b+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = (6.8*8.2/2)
b = (4.2*1.1/2)
c = (8.4*7.9/2)
print(a+b+c/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = (6.8*8.2/2)
b = (4.2*1.1/2)
c = (8.4*7.9/2)
print(a+b+c/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

a = (6.8*8.2/2)
b = (4.2*1.1/2)
c = (8.4*7.9/2)
print((a+b+c)/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]

h = 0
c = 0
for i in range(a):
		h = 
-- ERROR:
File "XXXX", line 10
    h = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]

h = 0
c = 0
for i in range(a):
		h = x[i,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]

h = 0
c = 0
for i in range(a):
		h += x[i,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]

h = 0
c = 0
for i in range(a):
		h += x[i,:]
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]

h = 0
c = 0
for i in range(a):
		h = x[i,:]
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]

h = 0
c = 0
for i in range(a):
		h = x[:,i]
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]

h = 0
c = 0
for i in range(a):
		h = x[:,i]
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]

h = 0
c = 0
for i in range(a):
		h = x[:,i]
print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-10 19:52:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]

h = 0
c = 0
for i in range(a):
	h = x[:,i]
for i in range(a):
	 
print(h)

-- ERROR:
File "XXXX", line 13
    print(h)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
